--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <script>
         var scene = new THREE.Scene();
         var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 3000);
-        camera.position.x = -10;
-        camera.position.y = 20;
-        camera.position.z = 10;
+        camera.position.x = -30;
+        camera.position.y = 50;
+        camera.position.z = 50;
         camera.lookAt(new THREE.Vector3(0, 5, 0));
         var controls = new THREE.OrbitControls(camera);
         scene.add(camera);
@@ -37,8 +37,9 @@
         renderer.gammaInput = true;
         document.body.appendChild(renderer.domElement);
         scene.add(new THREE.GridHelper(1000,100));
+        scene.add(new THREE.AxesHelper(1000));
         scene.add(new Cannon().mesh);
-        scene.add(new THREE.AmbientLight(0xffffff,1.2));
+        scene.add(new THREE.AmbientLight(0xffffff,0.9));
         function render() {
             requestAnimationFrame(render);
             renderer.render(scene, camera);
