--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <script src="js/Cannon.js"></script>
     <script src="js/Tank.js"></script>
     <script src="js/SmokeParticle.js"></script>
+    <script src="js/Stage.js"></script>
 </head>
 
 <body>
     <script>
         var scene = new THREE.Scene();
-        scene.fog = new THREE.Fog(0x652e37, 350, 500);
+        // scene.fog = new THREE.Fog(0x652e37, 350, 500);
         var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 3000);
         camera.position.x = 120;
         camera.position.y = 100;
@@ -44,7 +45,7 @@
         var stats = new Stats();
         document.body.appendChild( stats.dom )
         document.body.appendChild(renderer.domElement);
-        scene.add(new THREE.GridHelper(1000,100));
+        // scene.add(new THREE.GridHelper(1000,100));
         scene.add(new THREE.AxesHelper(1000));
         var cannon = new Cannon();
         scene.add(cannon.mesh);
@@ -52,7 +53,7 @@
         tank.mesh.position.x -= 150;
         scene.add(tank.mesh);
         scene.add(new THREE.HemisphereLight(0xffffff,0xb3858c,.8));
-        // scene.add(sp.mesh);
+        scene.add(new Stage().mesh);
         document.addEventListener( 'mousedown', onDocumentMouseDown, false );
         function onDocumentMouseDown(event){
             cannon.shoot();
