--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/Tank.js"></script>
     <script src="js/SmokeParticle.js"></script>
     <script src="js/Stage.js"></script>
+    <script src="js/Lights.js"></script>
 </head>
 
 <body>
@@ -43,7 +44,7 @@
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.gammaInput = true;
         var stats = new Stats();
-        document.body.appendChild( stats.dom )
+        document.body.appendChild(stats.dom)
         document.body.appendChild(renderer.domElement);
         // scene.add(new THREE.GridHelper(1000,100));
         scene.add(new THREE.AxesHelper(1000));
@@ -52,12 +53,14 @@
         var tank = new Tank();
         tank.mesh.position.x -= 150;
         scene.add(tank.mesh);
-        scene.add(new THREE.HemisphereLight(0xffffff,0xb3858c,.8));
+        scene.add(new Lights().lights);
         scene.add(new Stage().mesh);
-        document.addEventListener( 'mousedown', onDocumentMouseDown, false );
-        function onDocumentMouseDown(event){
+        document.addEventListener('mousedown', onDocumentMouseDown, false);
+
+        function onDocumentMouseDown(event) {
             cannon.shoot();
         }
+
         function render() {
             cannon.update();
             stats.update();
