--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
     <script src="lib/stats.min.js"></script>
     <script src="lib/astar.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/ai.js"></script>
 </head>
 <body>
 </body>
