--- a/game.html
+++ b/game.html
@@ -18,8 +18,8 @@
     <script src="lib/dat.gui.min.js"></script>
     <script src="lib/stats.min.js"></script>
     <script src="lib/astar.js"></script>
+    <script src="lib/btree-complete.js"></script>
     <script src="js/game.js"></script>
-    <script src="js/ai.js"></script>
 </head>
 <body>
 </body>
