--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
     <script src="lib/TweenMax.js"></script>
     <script src="lib/dat.gui.min.js"></script>
     <script src="lib/stats.min.js"></script>
-    <script src="lib/astar.js"></script>
+    <script src="lib/funs.js"></script>
     <script src="lib/btree-complete.js"></script>
     <script src="js/game.js"></script>
 </head>
