--- a/tweenmax.html
+++ b/tweenmax.html
@@ -54,13 +54,101 @@
         container.appendChild(renderer.domElement);
         scene.add(new THREE.GridHelper(100));
         scene.add(new THREE.AxesHelper(100));
+        createLights();
         window.addEventListener('resize', handleWindowResize, false);
 
         //----------------
-        var geom = new THREE.BoxGeometry(20, 20, 20);
-        var mesh = new THREE.Mesh(geom);
-        scene.add(mesh);
-        TweenLite.to([mesh.position,mesh.scale],10,{x:"+=20",y:"+=1"});
+
+        let attackTimeLine = new TimelineMax();
+        // let p = ["+=0", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9"];
+        var p = ["+=0", "-=0.99", "-=0.98", "-=0.97", "-=0.96", "-=0.95", "-=0.94", "-=0.93", "-=0.92", "-=0.91"]
+        // var p = ["+=0", "-=0.99", "-=0.98", "-=0.97", "-=0.96", "-=0.95", "-=0.94", "-=0.93", "-=0.92", "-=0.91"]
+        let speed = 2;
+        for (var i = 0; i < 10; i++) {
+            let geom = new THREE.BoxGeometry(1, 1, 1);
+            let particleMat = new THREE.MeshLambertMaterial({
+                transparent: true,
+                opacity: .5,
+                flatShading: THREE.FlatShading,
+            });
+            let mesh = new THREE.Mesh(geom, particleMat);
+            mesh.color = {
+                r: 255 / 255,
+                g: 205 / 255,
+                b: 74 / 255
+            };
+            mesh.updateColor = function () {
+                this.material.color.setRGB(this.color.r, this.color.g, this.color.b);
+            }
+            mesh.material.color.setRGB(mesh.color.r, mesh.color.g, mesh.color.b);
+            let bezierColor = [{
+                r: 255 / 255,
+                g: 205 / 255,
+                b: 74 / 255
+            }, {
+                r: 255 / 255,
+                g: 205 / 255,
+                b: 74 / 255
+            }, {
+                r: 255 / 255,
+                g: 205 / 255,
+                b: 74 / 255
+            }, {
+                r: 247 / 255,
+                g: 34 / 255,
+                b: 50 / 255
+            }, {
+                r: 0 / 255,
+                g: 0 / 255,
+                b: 0 / 255
+            }];
+            let maxSneezingRate = 1;
+            let f = 2.5;
+            let bezierScale = [{
+                x: 1,
+                y: 1,
+                z: 1
+            }, {
+                x: f / maxSneezingRate + Math.random() * .3,
+                y: f / maxSneezingRate + Math.random() * .3,
+                z: f * 2 / maxSneezingRate + Math.random() * .3
+            }, {
+                x: f / maxSneezingRate + Math.random() * .5,
+                y: f / maxSneezingRate + Math.random() * .5,
+                z: f * 2 / maxSneezingRate + Math.random() * .5
+            }, {
+                x: f * 2 / maxSneezingRate + Math.random() * .5,
+                y: f * 2 / maxSneezingRate + Math.random() * .5,
+                z: f * 4 / maxSneezingRate + Math.random() * .5
+            }, {
+                x: f * 2 + Math.random() * 5,
+                y: f * 2 + Math.random() * 5,
+                z: f * 2 + Math.random() * 5
+            }];
+            scene.add(mesh);
+            attackTimeLine.add(
+                [ TweenMax.to(mesh.position, speed, {
+                        y: 25
+                    }),
+                    TweenMax.to(mesh.rotation, speed, {
+                        x: Math.random() * Math.PI * 3,
+                        y: Math.random() * Math.PI * 3,
+                    }),
+                    TweenMax.to(mesh.scale, speed, {
+                        bezier: bezierScale,
+                        ease: Strong.easeOut
+                    }),
+                    TweenMax.to(mesh.material, speed, {
+                        opacity: 0,
+                        ease: Strong.easeOut
+                    }),
+                    TweenMax.to(mesh.color, speed, {
+                        bezier: bezierColor,
+                        ease: Strong.easeOut,
+                        onUpdate: () => mesh.updateColor()
+                    })], p[i], "start", 0);
+        }
+        attackTimeLine.call(() => console.log('finished'));
 
         function render() {
             requestAnimationFrame(render);
@@ -75,6 +163,13 @@
             camera.updateProjectionMatrix();
         }
         render();
+
+        function createLights() {
+            hemisphereLight = new THREE.HemisphereLight(0xaaaaaa, 0x000000, .5)
+            ambientLight = new THREE.AmbientLight(0xdc8874, .5);
+            scene.add(hemisphereLight);
+            scene.add(ambientLight);
+        }
     </script>
 </body>
 
