--- a/game.html
+++ b/game.html
@@ -20,6 +20,7 @@
     <script src="lib/funs.js"></script>
     <script src="lib/btree-complete.js"></script>
     <script src="js/Engine.js"></script>
+    <script src="js/HUD.js"></script>
     <script src="js/game.js"></script>
 </head>
 <body>
