--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
     <script src="lib/btree-complete.js"></script>
     <script src="js/Engine.js"></script>
     <script src="js/HUD.js"></script>
+    <script src="js/Stuff.js"></script>
     <script src="js/game.js"></script>
 </head>
 <body>
