--- a/tweenmax.html
+++ b/tweenmax.html
@@ -15,6 +15,12 @@
     <script src="lib/OrbitControls.js"></script>
     <script src="lib/TweenMax.js"></script>
 </head>
+<script id="vertexShader" type="x-shader/x-vertex">
+    varying vec3 vNormal; void main() { vNormal = normalize( normalMatrix * normal ); gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 ); }
+  </script>
+<script id="fragmentShader" type="x-shader/x-vertex">
+    varying vec3 vNormal; void main() { float intensity = pow( 0.7 - dot( vNormal, vec3( 0.0, 0.0, 1.0 ) ), 4.0 ); gl_FragColor = vec4( 1.0, 0.3, 1.0, 1.0 ) * intensity; }
+  </script>
 
 <body>
     <script>
@@ -54,101 +60,136 @@
         container.appendChild(renderer.domElement);
         scene.add(new THREE.GridHelper(100));
         scene.add(new THREE.AxesHelper(100));
-        createLights();
+        // createLights();
         window.addEventListener('resize', handleWindowResize, false);
 
         //----------------
 
-        let attackTimeLine = new TimelineMax();
-        // let p = ["+=0", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9"];
-        var p = ["+=0", "-=0.99", "-=0.98", "-=0.97", "-=0.96", "-=0.95", "-=0.94", "-=0.93", "-=0.92", "-=0.91"]
+        // let attackTimeLine = new TimelineMax();
+        // // let p = ["+=0", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9", "-=0.9"];
         // var p = ["+=0", "-=0.99", "-=0.98", "-=0.97", "-=0.96", "-=0.95", "-=0.94", "-=0.93", "-=0.92", "-=0.91"]
-        let speed = 1;
-        for (var i = 0; i < 10; i++) {
-            let geom = new THREE.BoxGeometry(1, 1, 1);
-            let particleMat = new THREE.MeshLambertMaterial({
-                transparent: true,
-                opacity: .5,
-                flatShading: THREE.FlatShading,
-            });
-            let mesh = new THREE.Mesh(geom, particleMat);
-            mesh.color = {
-                r: 255 / 255,
-                g: 205 / 255,
-                b: 74 / 255
-            };
-            mesh.updateColor = function () {
-                this.material.color.setRGB(this.color.r, this.color.g, this.color.b);
-            }
-            mesh.material.color.setRGB(mesh.color.r, mesh.color.g, mesh.color.b);
-            let bezierColor = [{
-                r: 255 / 255,
-                g: 205 / 255,
-                b: 74 / 255
-            }, {
-                r: 255 / 255,
-                g: 205 / 255,
-                b: 74 / 255
-            }, {
-                r: 255 / 255,
-                g: 205 / 255,
-                b: 74 / 255
-            }, {
-                r: 247 / 255,
-                g: 34 / 255,
-                b: 50 / 255
-            }, {
-                r: 0 / 255,
-                g: 0 / 255,
-                b: 0 / 255
-            }];
-            let maxSneezingRate = 1;
-            let f = 2.5;
-            let bezierScale = [{
-                x: 1,
-                y: 1,
-                z: 1
-            }, {
-                x: f / maxSneezingRate + Math.random() * .3,
-                y: f / maxSneezingRate + Math.random() * .3,
-                z: f * 2 / maxSneezingRate + Math.random() * .3
-            }, {
-                x: f / maxSneezingRate + Math.random() * .5,
-                y: f / maxSneezingRate + Math.random() * .5,
-                z: f * 2 / maxSneezingRate + Math.random() * .5
-            }, {
-                x: f * 2 / maxSneezingRate + Math.random() * .5,
-                y: f * 2 / maxSneezingRate + Math.random() * .5,
-                z: f * 4 / maxSneezingRate + Math.random() * .5
-            }, {
-                x: f * 2 + Math.random() * 5,
-                y: f * 2 + Math.random() * 5,
-                z: f * 2 + Math.random() * 5
-            }];
-            scene.add(mesh);
-            attackTimeLine.add(
-                [ TweenMax.to(mesh.position, speed, {
-                        y: 25
-                    }),
-                    TweenMax.to(mesh.rotation, speed, {
-                        x: Math.random() * Math.PI * 3,
-                        y: Math.random() * Math.PI * 3,
-                    }),
-                    TweenMax.to(mesh.scale, speed, {
-                        bezier: bezierScale,
-                        ease: Strong.easeOut
-                    }),
-                    TweenMax.to(mesh.material, speed, {
-                        opacity: 0,
-                        ease: Strong.easeOut
-                    }),
-                    TweenMax.to(mesh.color, speed, {
-                        bezier: bezierColor,
-                        ease: Strong.easeOut,
-                        onUpdate: () => mesh.updateColor()
-                    })], p[i], "start", 0);
-        }
-        attackTimeLine.call(() => console.log('finished'));
+        // // var p = ["+=0", "-=0.99", "-=0.98", "-=0.97", "-=0.96", "-=0.95", "-=0.94", "-=0.93", "-=0.92", "-=0.91"]
+        // let speed = 1;
+        // for (var i = 0; i < 10; i++) {
+        //     let geom = new THREE.BoxGeometry(1, 1, 1);
+        //     let particleMat = new THREE.MeshLambertMaterial({
+        //         transparent: true,
+        //         opacity: .5,
+        //         flatShading: THREE.FlatShading,
+        //     });
+        //     let mesh = new THREE.Mesh(geom, particleMat);
+        //     mesh.color = {
+        //         r: 255 / 255,
+        //         g: 205 / 255,
+        //         b: 74 / 255
+        //     };
+        //     mesh.updateColor = function () {
+        //         this.material.color.setRGB(this.color.r, this.color.g, this.color.b);
+        //     }
+        //     mesh.material.color.setRGB(mesh.color.r, mesh.color.g, mesh.color.b);
+        //     let bezierColor = [{
+        //         r: 255 / 255,
+        //         g: 205 / 255,
+        //         b: 74 / 255
+        //     }, {
+        //         r: 255 / 255,
+        //         g: 205 / 255,
+        //         b: 74 / 255
+        //     }, {
+        //         r: 255 / 255,
+        //         g: 205 / 255,
+        //         b: 74 / 255
+        //     }, {
+        //         r: 247 / 255,
+        //         g: 34 / 255,
+        //         b: 50 / 255
+        //     }, {
+        //         r: 0 / 255,
+        //         g: 0 / 255,
+        //         b: 0 / 255
+        //     }];
+        //     let maxSneezingRate = 1;
+        //     let f = 2.5;
+        //     let bezierScale = [{
+        //         x: 1,
+        //         y: 1,
+        //         z: 1
+        //     }, {
+        //         x: f / maxSneezingRate + Math.random() * .3,
+        //         y: f / maxSneezingRate + Math.random() * .3,
+        //         z: f * 2 / maxSneezingRate + Math.random() * .3
+        //     }, {
+        //         x: f / maxSneezingRate + Math.random() * .5,
+        //         y: f / maxSneezingRate + Math.random() * .5,
+        //         z: f * 2 / maxSneezingRate + Math.random() * .5
+        //     }, {
+        //         x: f * 2 / maxSneezingRate + Math.random() * .5,
+        //         y: f * 2 / maxSneezingRate + Math.random() * .5,
+        //         z: f * 4 / maxSneezingRate + Math.random() * .5
+        //     }, {
+        //         x: f * 2 + Math.random() * 5,
+        //         y: f * 2 + Math.random() * 5,
+        //         z: f * 2 + Math.random() * 5
+        //     }];
+        //     scene.add(mesh);
+        //     attackTimeLine.add(
+        //         [ TweenMax.to(mesh.position, speed, {
+        //                 y: 25
+        //             }),
+        //             TweenMax.to(mesh.rotation, speed, {
+        //                 x: Math.random() * Math.PI * 3,
+        //                 y: Math.random() * Math.PI * 3,
+        //             }),
+        //             TweenMax.to(mesh.scale, speed, {
+        //                 bezier: bezierScale,
+        //                 ease: Strong.easeOut
+        //             }),
+        //             TweenMax.to(mesh.material, speed, {
+        //                 opacity: 0,
+        //                 ease: Strong.easeOut
+        //             }),
+        //             TweenMax.to(mesh.color, speed, {
+        //                 bezier: bezierColor,
+        //                 ease: Strong.easeOut,
+        //                 onUpdate: () => mesh.updateColor()
+        //             })], p[i], "start", 0);
+        // }
+        // attackTimeLine.call(() => console.log('finished'));
+
+        //-----------------------------
+        var geom3 = new THREE.SphereGeometry(12, 32, 6);
+        var mat3 = new THREE.ShaderMaterial({
+            uniforms: {},
+            vertexShader: document.getElementById('vertexShader').textContent,
+            fragmentShader: document.getElementById('fragmentShader').textContent,
+            side: THREE.BackSide,
+            blending: THREE.AdditiveBlending,
+            transparent: true
+        });
+        var material = new THREE.MeshPhongMaterial({
+            color: 0x777777,
+            flatShading: THREE.FlatShading
+        });
+        var ball = new THREE.Mesh(geom3, mat3);
+        ball.scale.x = ball.scale.y = ball.scale.z = 1;
+        ball.position.y +=10;
+        // halo.add(ball);
+        scene.add(ball);
+        // var geometry = new THREE.Mesh(5, 1);//new THREE.TetrahedronGeometry(1, 1);
+        // var mesh = new THREE.Mesh(geometry);
+        // // var pointsUp = GeoGenTextures.buildPoints(3, Math.PI * 1.5);
+        // scene.add(mesh);
+
+        var lights = [];
+        lights[0] = new THREE.DirectionalLight(0xffffff, 1);
+        lights[0].position.set(1, 0, 0);
+        lights[1] = new THREE.DirectionalLight(0x15374F, 1);
+        lights[1].position.set(0.75, 1, 0.5);
+        lights[2] = new THREE.DirectionalLight(0x000C1C, 1);
+        lights[2].position.set(-0.75, -1, 0.5);
+        scene.add(lights[0]);
+        scene.add(lights[1]);
+        scene.add(lights[2]);
 
         function render() {
             requestAnimationFrame(render);
@@ -162,6 +203,7 @@
             camera.aspect = WIDTH / HEIGHT;
             camera.updateProjectionMatrix();
         }
+
         render();
 
         function createLights() {
