--- a/game.html
+++ b/game.html
@@ -23,6 +23,7 @@
     <script src="js/Engine.js"></script>
     <script src="js/HUD.js"></script>
     <script src="js/Stuff.js"></script>
+    <script src="js/River.js"></script>
     <script src="js/game.js"></script>
     <script type="x-shader/x-vertex" id="vertexShader">
         varying vec3 vWorldPosition;
