--- a/game.html
+++ b/game.html
@@ -25,6 +25,7 @@
     <script src="js/Stuff.js"></script>
     <script src="js/River.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/Mountain.js"></script>
     <script type="x-shader/x-vertex" id="vertexShader">
         varying vec3 vWorldPosition;
         void main() {
