--- a/tweenmax.html
+++ b/tweenmax.html
@@ -216,6 +216,7 @@
         }
         var redMat = new THREE.MeshPhongMaterial({
             flatShading: THREE.FlatShading,
+            // wireframe:true,
             color: Colors.red
         });
         var blackMat = new THREE.MeshPhongMaterial({
