--- a/tweenmax.html
+++ b/tweenmax.html
@@ -187,6 +187,7 @@
         scene.add(lights[0]);
         scene.add(lights[1]);
         scene.add(lights[2]);
+        renderer.sortObjects = false;
 
         function render() {
             // copter.update();
