--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
     <script src="lib/stats.min.js"></script>
     <script src="lib/funs.js"></script>
     <script src="lib/btree-complete.js"></script>
+    <script src="js/Effect.js"></script>
     <script src="js/Units.js"></script>
     <script src="js/Engine.js"></script>
     <script src="js/HUD.js"></script>
